--- a/assets/config.ini
+++ b/assets/config.ini
@@ -1,70 +1,8 @@
-[dodatki]
-name=dodatki
-[tirex]
-name=tirex
-[pustynia]
-name=pustynia
-[schody]
-name=schody
-[dzungla]
-name=dzungla
 [skaly]
-name=skaly
-[plotki-i-mostki]
-name=plotki-i-mostki
-[wiszace]
-name=wiszace
-[domki-drewno-dodatki]
-name=domki-drewno-dodatki
-[drzwi-i-okna]
-name=drzwi-i-okna
-[kanalizacja]
-name=kanalizacja
-[kwiatki-i-krzaczki]
-name=kwiatki-i-krzaczki
-[pajeczyny]
-name=pajeczyny
-[mury-i-kominki]
-name=mury-i-kominki
-[thuzal]
-name=thuzal
-[profile]
-name=Moje Nagie Fotki
-[drzewa]
-name=drzewa
-[jaskinie-brazowe]
-name=jaskinie-brazowe
-[jednorazowe]
-name=jednorazowe
-[podloza-wnetrz]
-name=podloza-wnetrz
-[jaskinie-lodowe]
-name=jaskinie-lodowe
-[stojace]
-name=stojace
-[meble]
-name=meble
-[techniczne]
-name=techniczne
-[wybrzeze]
-name=wybrzeze
-[kopalnia]
-name=kopalnia
-[domki-piaskowe]
-name=domki-piaskowe
-[podloza]
-name=podloza
-[specjalne-okazje]
-name=specjalne-okazje
-[domki-murowane]
-name=domki-murowane
+name=Skały
+[pustynia]
+name=Pustynia
 [portowe]
-name=portowe
-[mury-i-wieze]
-name=mury-i-wieze
-[jaskinie-szare]
-name=jaskinie-szare
-[materialowe]
-name=materialowe
-[statki]
-name=statki
+name=Portowe
+[schody]
+name=Schody
